# Drone-Tuning-Agent

./: .gitignore  README.md  agent.py  drone-agent-cli.spec  hardware_profiles.py  main.py  opencode.json  pyproject.toml  report_pdf.py
.github/workflows/: ci.yml
backend/: agent.py  drone-agent-cli.spec  main.py  pyproject.toml
backend/config/: x760_hardware.json
backend/tests/: test_chart_data.py  test_llm_continuation.py
backend/tools/: charts.py  metrics.py  migrate_charts.py  parser.py
config/hardware-profiles/: manifest.json  x760_base.json  x760_profile_v001.json  x760_profile_v002.json  x760_profile_v003.json
config/param-profiles/: x760_px4_hflow.json  x760_px4_hflow_s30.json  x760_px4_hflow_s30_rtk.json  x760_px4_stable.json
config/peripheral-schemas/: hflow_optical_flow.schema.json  rplidar_s30.schema.json  rtk_gps.schema.json
config/vehicles/: x760.json
desktop/: afterPack.js  main.js  package-lock.json  package.json  runtime-core.js
desktop/tests/: runtime-core.test.js
docs/: 2.params
frontend/: package-lock.json  package.json
frontend/tests/: chart-config.test.mjs  diagnosis-client-utils.test.mjs  diagnosis-server-utils.test.mjs  run-utils.test.mjs  runs-api.test.mjs  wizard-utils.test.mjs
prompts/: system.md
scripts/: package-windows.ps1
tests/: test_hardware_profiles.py
tools/: charts.py  metrics.py  parser.py  rules.py
webui/: next.config.ts  package-lock.json  package.json
webui/tests/: diagnose-command.test.mjs  diagnose-hardware.test.mjs  diagnose-status.test.mjs  hardware-profile-registry.test.mjs  (+1 more)
(+84 files in other folders)
